# python-prusa-connect-sdk-client

./: .envrc  .gitignore  .mdformat.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  test_cli_subcommands.py  test_pydantic_cli.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-uv-lock-commit.yml  dependabot-uv-lock.yml  docs-check.yml  docs.yml  publish.yml
docs/: authentication.md  cli_reference.md  examples.md  installation.md  internal_architecture.md  quickstart.md
docs/api/: auth.md  client.md  models.md  openapi-reference.md  openapi.json
docs/cli/: quickstart.md  reference.md
docs/css/: extra.css  mkdocstrings.css
docs/development_notes/: camera_protobuf_signaling_notes.md  command_execution_design.md  rest_api_reference.md
docs/sdk/: quickstart.md
examples/client_auth/: client_auth.py
examples/hello_world/: hello_prusa.py
overrides/partials/: comments.html
proto/prusa/connect/client/: camera_v2.proto
src/prusa/connect/client/: __init__.py  __main__.py  __version__.py  auth.py  camera.py  command_models.py  consts.py  exceptions.py  gcode.py  models.py  sdk.py
src/prusa/connect/client/cli/: __init__.py  common.py  config.py  consts.py  main.py
src/prusa/connect/client/cli/commands/: __init__.py  api.py  auth.py  camera.py  file.py  job.py  printer.py  stats.py  team.py
src/prusa/connect/client/cli/templates/: webrtc_template.html
src/prusa/connect/client/models/: __init__.py  cameras.py  common.py  config.py  files.py  jobs.py  printers.py  stats.py  teams.py
src/prusa/connect/client/services/: base.py  cameras.py  files.py  jobs.py  printers.py  stats.py  teams.py
src/prusa_connect/: __init__.py  __version__.py  api.py  auth.py  cli.py  cli_config.py  client.py  config.py  exceptions.py  models.py
tests/: conftest.py  test_auth_models.py  test_client.py  test_client_improvements.py  test_credentials.py  test_dx.py  test_retry.py
tests/unit_tests/: test_auth_models.py  test_caching.py  test_caching_ttl.py  test_camera_client.py  test_camera_models.py  test_cli_api.py  test_cli_auth.py  test_cli_camera.py  test_cli_file.py  test_cli_job.py  test_cli_output.py  test_cli_printer.py  test_cli_stats.py  test_cli_team.py  test_client.py  test_client_improvements.py  test_command_execution.py  test_config.py  test_credentials.py  test_dx.py  test_file_management.py  test_gcode.py  test_global_flags.py  test_job_features.py  test_printer_details.py  test_retry.py  test_sdk_coverage.py  test_stats.py  test_storage.py
tests/unit_tests/data/: benchyrules_pla_14m.gcode
